--- a/configs/config.json
+++ b/configs/config.json
@@ -1,5 +1,5 @@
 {
-    "n_clusters" : 40,
+    "n_clusters" : 8,
     "n_jobs" : 28,
-    "result_name" : "result_tsfresh_10bin"
+    "result_name" : "result_tsfresh_3bin_only_max_to_17_5mag"
 }
